Added docker build and push, updated deployments
Updated deployments to pull docker images from Docker Hub - image pushed
from the Jenkins Docker push job.

--- a/k8s/canary/tomcat-canary-deployment.yml
+++ b/k8s/canary/tomcat-canary-deployment.yml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: tomcat
-        image: tomcat:8.0-alpine
+        image: mfabriczy/tomcat-war-deploy:1.0
         imagePullPolicy: Always
         ports:
         - name: tomcat
