--- a/k8s/production/tomcat-prod-deployment.yml
+++ b/k8s/production/tomcat-prod-deployment.yml
@@ -14,6 +14,10 @@ spec:
       - name: tomcat
         image: mfabriczy/tomcat-war-deploy:1.0
         imagePullPolicy: Always
+        resources:
+          limits:
+            memory: "500Mi"
+            cpu: "500m"
         ports:
         - name: tomcat
           containerPort: 8080
