--- a/jenkins-override-values.yml
+++ b/jenkins-override-values.yml
@@ -1,8 +1,5 @@
-Master:
-  InstallPlugins:
-    - kubernetes:1.1
-    - workflow-aggregator:2.5
-    - workflow-job:2.17
-    - credentials-binding:1.13
-    - git:3.6.4
-    - workflow-multibranch:2.17
+controller:
+  adminPassword: "password"
+  additionalPlugins:
+    - credentials-binding:1.24
+    - workflow-multibranch:2.22
